--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -7,12 +7,15 @@ page-login {
     margin-top: 7rem;
   }
   &-form {
-    backdrop-filter: blur(70px);
-    margin-top: 5rem;
-    padding-bottom: 3rem;
+    margin-top: 7rem;
+    background-color: white;
+    box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
     ion-item {
       background: transparent;
       border-bottom: none;
+    }
+    &-buttons {
+      margin: 3rem .75rem 0 .75rem;
     }
   }
 }
