--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -41,8 +41,9 @@ $text-input-md-show-valid-highlight: transparent;
 // The "primary" color is the only required color in the map.
 
 $colors: (
-  primary:    #488aff,
-  secondary:  #32db64,
+  primary:    #40c4ff,
+  secondary:  #7a43f2,
+  success:    #32db64,
   danger:     #f53d3d,
   light:      #f4f4f4,
   dark:       #222,
@@ -78,7 +79,7 @@ $colors: (
 // so that the above variables are used and Ionic's
 // default are overridden.
 
-@import "ionic.theme.dark";
+@import "ionic.theme.default";
 
 
 // Ionicons
