Added account + home + disconnect

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -43,11 +43,11 @@ $text-input-md-show-valid-highlight: transparent;
 $colors: (
   primary:    #40c4ff,
   secondary:  #7a43f2,
+  muted:      grey,
   success:    #32db64,
   danger:     #f53d3d,
   light:      #f4f4f4,
   dark:       #222,
-  transparent: transparent
 );
 
 
