Issue #6 - Added qrcode scanner but not linked to api + correct api bug

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -82,6 +82,11 @@ $colors: (
 @import "ionic.theme.default";
 
 
+ion-app.cameraView, ion-app.cameraView ion-content, ion-app.cameraView .nav-decor {
+  background: transparent none !important;
+}
+
+
 // Ionicons
 // --------------------------------------------------
 // The premium icon font for Ionic. For more info, please see:
