--- a/src/pages/main/home/home.scss
+++ b/src/pages/main/home/home.scss
@@ -1,11 +1,14 @@
 page-home {
-  .icon {
-    display: flex;
-    align-content: center;
-    align-items: center;
-  }
 
-  ion-icon {
-    font-size: 2.75rem;
+  ion-list {
+    .icon {
+      display: flex;
+      align-content: center;
+      align-items: center;
+    }
+
+    ion-icon {
+      font-size: 2.75rem;
+    }
   }
 }
