--- a/src/pages/mirror/mirror-options/mirror-options.scss
+++ b/src/pages/mirror/mirror-options/mirror-options.scss
@@ -1,10 +1,11 @@
 page-mirror-options {
+
   .close-button {
-    font-size: 4rem;
+    font-size: 35px;
     position: absolute;
     top: 0;
     left: 0;
-    margin: 1rem 2rem;
+    margin: 2.5rem 2.5rem;
     color: white;
     z-index: 100;
   }
@@ -37,6 +38,28 @@ page-mirror-options {
       display: inline-block;
       padding: .5rem 1rem;
       font-size: 1.2rem;
+    }
+  }
+
+  .action {
+    &-buttons {
+      text-align: center;
+      margin: 3rem 1rem;
+
+      .edit-button ion-icon {
+        display: inline-block;
+        font-size: 3vh;
+        color: map-get($colors, dark);
+        background-color: #f3f3f3;
+        padding: 1.2rem 1.5rem;
+        border-radius: 1000px;
+      }
+    }
+
+    &-text {
+      display: block;
+      color: map-get($colors, dark);
+      margin-top: 1rem;
     }
   }
 }
