--- a/src/pages/mirror/mirror.scss
+++ b/src/pages/mirror/mirror.scss
@@ -1,3 +1,42 @@
 page-mirror {
 
+  .header {
+    padding: 1rem 1rem 1rem 1rem;
+    background: #f5f5f5;
+    border-top: none;
+  }
+
+  .text {
+    display: inline-block;
+    vertical-align: top;
+    margin-left: .5rem;
+  }
+
+  .name {
+    font-size: 1.8rem;
+    font-weight: bold;
+    display: block;
+    margin-bottom: .75rem;
+    color: map-get($colors, dark);
+  }
+
+  .model {
+    vertical-align: top;
+    display: block;
+  }
+
+  .date {
+    color: grey;
+    margin-top: 1rem;
+  }
+
+  .button {
+    font-size: 22px;
+    position: absolute;
+    right: 0;
+    top: 0;
+    margin: 1rem;
+    color: map-get($colors, dark);
+    background: transparent;
+  }
 }
