Added module service

--- a/src/pages/mirror/mirror.scss
+++ b/src/pages/mirror/mirror.scss
@@ -43,4 +43,16 @@ page-mirror {
   .body {
     border-top: 2px solid lightgrey;
   }
+
+  ion-list {
+    .icon {
+      display: flex;
+      align-content: center;
+      align-items: center;
+    }
+
+    ion-icon {
+      font-size: 3.5rem;
+    }
+  }
 }
