Issue #21 - Updated auto refresh

--- a/src/components/loader/loader.html
+++ b/src/components/loader/loader.html
@@ -1,7 +1,8 @@
 <div text-center>
-  <div class="spinner">
-    <div class="bounce1" [style.color]="color"></div>
-    <div class="bounce2" [style.color]="color"></div>
-    <div class="bounce3" [style.color]="color"></div>
+  <div class="lds-ellipsis">
+    <div [style.background]="color"></div>
+    <div [style.background]="color"></div>
+    <div [style.background]="color"></div>
+    <div [style.background]="color"></div>
   </div>
 </div>
