Added basic menu into shop

--- a/src/pages/mirror/mirror.scss
+++ b/src/pages/mirror/mirror.scss
@@ -9,7 +9,7 @@ page-mirror {
   .text {
     display: inline-block;
     vertical-align: top;
-    margin-left: .5rem;
+    margin-left: 1rem;
   }
 
   .name {
