--- a/src/pages/mirror/mirror.scss
+++ b/src/pages/mirror/mirror.scss
@@ -55,4 +55,15 @@ page-mirror {
       font-size: 3.5rem;
     }
   }
+
+  .no-apps-found {
+    color: grey;
+    font-weight: 500;
+    text-transform: uppercase;
+    img {
+      margin-bottom: 2rem;
+      -webkit-filter: grayscale(100%);
+      filter: grayscale(100%);
+    }
+  }
 }
