--- a/src/pages/mirror/search/search.scss
+++ b/src/pages/mirror/search/search.scss
@@ -11,4 +11,32 @@ page-search {
     background: #F8F8F8;
     padding: 0 15px;
   }
+
+  ion-list {
+    .icon {
+      display: flex;
+      align-content: center;
+      align-items: center;
+    }
+
+    ion-icon {
+      font-size: 3.5rem;
+    }
+  }
+
+  .no-apps-found {
+    position: absolute;
+    top: 35%;
+    left: 50%;
+    white-space: nowrap;
+    transform: translate(-50%, -50%);
+    color: grey;
+    font-weight: 500;
+    text-transform: uppercase;
+    img {
+      margin-bottom: 2rem;
+      -webkit-filter: grayscale(100%);
+      filter: grayscale(100%);
+    }
+  }
 }
