Updated home design and added big + buttons in menu + color changed

--- a/src/pages/main/home/home.scss
+++ b/src/pages/main/home/home.scss
@@ -11,4 +11,11 @@ page-home {
       font-size: 2.75rem;
     }
   }
+
+  .title-text {
+    margin-left: 1.5rem;
+    font-weight: lighter;
+    color: #2f2f2f;
+    font-size: 2rem;
+  }
 }
