--- a/src/pages/main/add-mirror/add-mirror.scss
+++ b/src/pages/main/add-mirror/add-mirror.scss
@@ -1,5 +1,23 @@
 page-add-mirror {
-  .mirror-input {
-    margin-top: 8vh;
+  p {
+    margin-top: 0;
+  }
+
+  hr {
+    margin: 3rem 0;
+  }
+
+  .mirror-input-content {
+    margin-top: 4rem;
+  }
+
+  ion-label {
+    font-size: 1.7rem;
+  }
+
+  ion-input {
+    font-size: 1.7rem;
+    border: 1px solid rgba(0, 0, 0, 0.12);
+    border-radius: 3px;
   }
 }
