--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -107,17 +107,13 @@ ion-app.cameraView, ion-app.cameraView ion-content, ion-app.cameraView .nav-deco
 }
 
 ion-header {
-  box-shadow: 0 1px 3px rgba(0,0,0,0.05), 0 1px 2px rgba(0,0,0,0.1) !important;
+  box-shadow: 0 1px 3px rgba(0,0,0,0.05), 0 1px 2px rgba(0,0,0,0.1);
 }
 
 .tabbar {
   background: #F9F9F9 !important;
   border: none !important;
   box-shadow: 0 -1px 3px rgba(0,0,0,0.05), 0 -1px 2px rgba(0,0,0,0.1) !important;
-}
-
-.item {
-  border-bottom: 1px solid #eeeeee !important;
 }
 
 .fab {
