--- a/src/pages/main/home/home.scss
+++ b/src/pages/main/home/home.scss
@@ -17,4 +17,11 @@ page-home {
     font-weight: lighter;
     color: #2f2f2f;
   }
+
+  .no-mirror-found {
+    color: grey;
+    font-weight: 500;
+    text-transform: uppercase;
+    margin-top: 5rem;
+  }
 }
