Added register page + updated design

--- a/src/app/pages/auth/login/login.page.html
+++ b/src/app/pages/auth/login/login.page.html
@@ -21,7 +21,7 @@
     </ion-item>
 
     <div padding-top text-right>
-      <ion-button size="default" fill="outline" color="secondary">S'inscrire</ion-button>
+      <ion-button size="default" fill="outline" color="secondary" href="/register">S'inscrire</ion-button>
       <ion-button size="default" color="primary">Envoyer</ion-button>
     </div>
 
