--- a/src/app/pages/auth/register/register.page.scss
+++ b/src/app/pages/auth/register/register.page.scss
@@ -1,4 +1,4 @@
-.login {
+.register {
   &-header {
     margin-top: 3rem;
   }
@@ -7,6 +7,11 @@
     margin-top: 3rem;
     --ion-background-color: white;
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+
+    ion-item {
+      background: transparent;
+      border-bottom: none;
+    }
   }
 
   ion-img {
@@ -14,6 +19,10 @@
     height: 80px;
     margin-left: auto;
     margin-right: auto;
+  }
+
+  .send-button {
+    float: right;
   }
 }
 
