Added lost password page + updated design

--- a/src/app/pages/auth/login/login.page.html
+++ b/src/app/pages/auth/login/login.page.html
@@ -21,12 +21,12 @@
     </ion-item>
 
     <div padding-top text-right>
-      <ion-button size="default" fill="outline" color="secondary" href="/register">S'inscrire</ion-button>
+      <ion-button size="default" fill="outline" color="secondary" routerLink="/lost-password">S'inscrire</ion-button>
       <ion-button size="default" color="primary">Envoyer</ion-button>
     </div>
 
     <div text-right padding-top>
-      <a text-right>Mot de passe oublié ?</a>
+      <a text-right routerLink="/lost-password">Mot de passe oublié ?</a>
     </div>
   </ion-list>
 
