Added api service + auth service

--- a/src/app/pages/auth/login/login.page.html
+++ b/src/app/pages/auth/login/login.page.html
@@ -22,7 +22,7 @@
 
     <div padding-top text-right>
       <ion-button size="default" fill="outline" color="secondary" routerLink="/lost-password">S'inscrire</ion-button>
-      <ion-button size="default" color="primary">Envoyer</ion-button>
+      <ion-button size="default" color="primary" (click)="login()">Envoyer</ion-button>
     </div>
 
     <div text-right padding-top>
