Added lost password back connection to api

--- a/src/app/pages/auth/login/login.page.html
+++ b/src/app/pages/auth/login/login.page.html
@@ -21,7 +21,7 @@
     </ion-item>
 
     <div padding-top text-right>
-      <ion-button size="default" fill="outline" color="secondary" routerLink="/lost-password">S'inscrire</ion-button>
+      <ion-button size="default" fill="outline" color="secondary" routerLink="/register">S'inscrire</ion-button>
       <ion-button size="default" color="primary" (click)="login()">Envoyer</ion-button>
     </div>
 
