--- a/src/app/pages/auth/lost-password/lost-password.page.html
+++ b/src/app/pages/auth/lost-password/lost-password.page.html
@@ -26,7 +26,7 @@
       </ion-button>
 
       <div class="send-button">
-        <ion-button size="default" color="primary">Envoyer</ion-button>
+        <ion-button size="default" color="primary" (click)="lostPassword()">Envoyer</ion-button>
       </div>
     </div>
 
