--- a/src/app/pages/auth/register/register.page.html
+++ b/src/app/pages/auth/register/register.page.html
@@ -30,7 +30,7 @@
           <ion-icon name="arrow-dropleft"></ion-icon>
         </ion-button>
       <div class="send-button">
-        <ion-button color="primary" size="default">Envoyer</ion-button>
+        <ion-button color="primary" size="default" (click)="register()">Envoyer</ion-button>
       </div>
     </div>
 
