--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -5,8 +5,8 @@
       <ion-icon name="flash"></ion-icon>
     </ion-tab-button>
 
-    <ion-tab-button tab="tab2">
-      <ion-icon name="add"></ion-icon>
+    <ion-tab-button>
+
     </ion-tab-button>
 
     <ion-tab-button tab="tab3">
@@ -15,3 +15,10 @@
   </ion-tab-bar>
 
 </ion-tabs>
+
+
+<ion-fab vertical="bottom" horizontal="center" slot="fixed">
+  <ion-fab-button (click)="AddMirror()">
+    <ion-icon name="add"></ion-icon>
+  </ion-fab-button>
+</ion-fab>
