Deleted useless tabs + added account view + design + back + README

--- a/src/app/pages/auth/lost-password/lost-password.page.html
+++ b/src/app/pages/auth/lost-password/lost-password.page.html
@@ -21,7 +21,7 @@
     </ion-item>
 
     <div padding-top>
-      <ion-button size="default" color="secondary" fill="outline" href="/login">
+      <ion-button size="default" color="secondary" fill="outline" [routerLink]="['/login']" routerDirection="back">
         <ion-icon name="arrow-dropleft"></ion-icon>
       </ion-button>
 
