--- a/src/app/pages/auth/register/register.page.html
+++ b/src/app/pages/auth/register/register.page.html
@@ -26,7 +26,7 @@
     </ion-item>
 
     <div padding-top>
-        <ion-button color="secondary" size="default" fill="outline" href="/login">
+        <ion-button color="secondary" size="default" fill="outline" [routerLink]="['/login']" routerDirection="back">
           <ion-icon name="arrow-dropleft"></ion-icon>
         </ion-button>
       <div class="send-button">
