--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -9,7 +9,7 @@
 
     </ion-tab-button>
 
-    <ion-tab-button tab="tab3">
+    <ion-tab-button tab="account">
       <ion-icon name="contact"></ion-icon>
     </ion-tab-button>
   </ion-tab-bar>
