--- a/src/app/pages/home/dashboard/dashboard.page.html
+++ b/src/app/pages/home/dashboard/dashboard.page.html
@@ -21,12 +21,16 @@
 
     <ion-item-sliding *ngFor="let mirror of mirrors" #slidingItem>
 
-      <ion-item routerLink="/store/mirror" routerDirection="root">
+      <ion-item (click)="navigateMirrorStore(mirror)">
         <ion-avatar class="icon">
           <ion-icon name="aperture" style="font-size: 1.5rem"></ion-icon>
         </ion-avatar>
 
         <ion-label>{{ mirror.name }}</ion-label>
+
+        <ion-note item-end>
+          <ion-icon name="arrow-forward"></ion-icon>
+        </ion-note>
 
       </ion-item>
 
