Added setting + edit mirror name + updated router + minor updates

--- a/src/app/pages/home/dashboard/dashboard.page.html
+++ b/src/app/pages/home/dashboard/dashboard.page.html
@@ -17,7 +17,7 @@
 
   <ion-progress-bar type="indeterminate" *ngIf="loader"></ion-progress-bar>
 
-  <ion-list *ngIf="mirrors !== undefined">
+  <ion-list *ngIf="mirrors !== undefined && mirrors !== null">
 
     <ion-item-sliding *ngFor="let mirror of mirrors" #slidingItem>
 
