--- a/src/app/pages/home/store/mirror/mirror-popover/mirror-popover.component.html
+++ b/src/app/pages/home/store/mirror/mirror-popover/mirror-popover.component.html
@@ -1,5 +1,5 @@
 <ion-list lines="none">
-  <ion-item button>
+  <ion-item button  (click)="settings()">
     <ion-icon name="options"></ion-icon>
     Settings
   </ion-item>
