Updated mirror settings

--- a/src/app/pages/home/store/mirror/mirror.page.html
+++ b/src/app/pages/home/store/mirror/mirror.page.html
@@ -2,7 +2,7 @@
 
 </ion-header>
 
-<ion-content forceOverscroll="false">
+<ion-content>
 
   <ion-progress-bar type="indeterminate" *ngIf="loader"></ion-progress-bar>
 
