--- a/src/app/pages/home/store/mirror/mirror-popover/mirror-settings/mirror-settings.page.html
+++ b/src/app/pages/home/store/mirror/mirror-popover/mirror-settings/mirror-settings.page.html
@@ -3,7 +3,7 @@
 </ion-header>
 
 <ion-content forceOverscroll="false">
-  <div class="close-button">
+  <div class="close-button" routerLink="/store/mirror" routerDirection="backward">
     <ion-icon name="close"></ion-icon>
   </div>
   <div class="background"></div>
