--- a/src/app/pages/home/store/app/app-details/app-details.page.scss
+++ b/src/app/pages/home/store/app/app-details/app-details.page.scss
@@ -10,7 +10,7 @@
 }
 
 .name {
-  font-size: 1.8rem;
+  font-size: 1.5rem;
   font-weight: bold;
   display: block;
   margin-bottom: .75rem;
@@ -39,7 +39,7 @@
 }
 
 ion-icon {
-  font-size: 12rem;
+  font-size: 8rem;
 }
 
 .body {
@@ -48,10 +48,11 @@ ion-icon {
 
 .pictures {
   border-top: 1px solid lightgrey;
-  padding-top: 2rem;
-  margin-bottom: 1.5rem;
-  height: 65vh;
+  padding: 1rem 0;
   overflow: hidden;
+  h4 {
+    margin-left: 1rem;
+  }
 }
 
 .description {
@@ -74,12 +75,16 @@ ion-icon {
   }
 
   .information-title {
-    font-size: 1.3rem;
+    font-size: 1rem;
     color: grey;
   }
 
   .information-content {
-    font-size: 1.3rem;
+    font-size: 1rem;
+  }
+
+  h4 {
+    margin-left: 1rem;
   }
 }
 
