--- a/src/app/pages/home/store/app/app-details/app-details.page.html
+++ b/src/app/pages/home/store/app/app-details/app-details.page.html
@@ -7,71 +7,73 @@
 </ion-header>
 
 <ion-content>
-  <div class="header">
-    <div class="module">
-      <ion-grid>
-        <ion-row>
-          <ion-col size="4">
-            <ion-img *ngIf="application.logo_url" src="{{ application.logo_url }}"
-                     style="border-radius: 20px;"></ion-img>
-            <ion-icon name="logo-dropbox" *ngIf="!application.logo_url"></ion-icon>
-          </ion-col>
-          <ion-col size="8">
-            <div class="text">
-              <span class="name">{{ application.title }}</span>
-              <span class="author">{{ application.repository }}</span>
-              <div class="button">
-                <!--<loader-module *ngIf="loader"></loader-module>-->
-                <ion-button (click)="uninstall ? uninstallApp() : install()" *ngIf="!loader">
-                  {{ loader ? '' : buttonText }}
-                </ion-button>
+  <div *ngIf="mirror && application">
+    <div class="header">
+      <div class="module">
+        <ion-grid>
+          <ion-row>
+            <ion-col size="4">
+              <ion-img *ngIf="application.logo_url" src="{{ application.logo_url }}"
+                       style="border-radius: 20px;"></ion-img>
+              <ion-icon name="logo-dropbox" *ngIf="!application.logo_url"></ion-icon>
+            </ion-col>
+            <ion-col size="8">
+              <div class="text">
+                <span class="name">{{ application.title }}</span>
+                <span class="author">{{ application.repository }}</span>
+                <div class="button">
+                  <!--<loader-module *ngIf="loader"></loader-module>-->
+                  <ion-button (click)="uninstall ? uninstallApp() : install()" *ngIf="!loader">
+                    {{ loader ? '' : buttonText }}
+                  </ion-button>
+                </div>
               </div>
+            </ion-col>
+          </ion-row>
+        </ion-grid>
+      </div>
+    </div>
+    <div class="body">
+      <div class="pictures">
+        <h4>Preview</h4>
+        <ion-slides pager="false" *ngIf="isArray(application.screenshots)">
+          <ion-slide *ngFor="let screenshot of application.screenshots">
+            <img src="{{ screenshot }}">
+          </ion-slide>
+        </ion-slides>
+      </div>
+      <div class="description">
+        <p>{{ application.description }}</p>
+      </div>
+      <div class="information">
+        <h4>Informations</h4>
+        <ion-item-group>
+          <ion-item>
+            <div class="information-title">
+              Developpeur
             </div>
-          </ion-col>
-        </ion-row>
-      </ion-grid>
-    </div>
-  </div>
-  <div class="body">
-    <div class="pictures">
-      <h4>Preview</h4>
-      <ion-slides pager="false" *ngIf="isArray(application.screenshots)">
-        <ion-slide *ngFor="let screenshot of application.screenshots">
-          <img src="{{ screenshot }}">
-        </ion-slide>
-      </ion-slides>
-    </div>
-    <div class="description">
-      <p>{{ application.description }}</p>
-    </div>
-    <div class="information">
-      <h4>Informations</h4>
-      <ion-item-group>
-        <ion-item>
-          <div class="information-title">
-            Developpeur
-          </div>
-          <div class="information-content" slot="end">
-            {{ application.repository }}
-          </div>
-        </ion-item>
-        <ion-item>
-          <div class="information-title">
-            Catégorie
-          </div>
-          <div class="information-content" slot="end">
-            {{ application.category }}
-          </div>
-        </ion-item>
-        <ion-item>
-          <div class="information-title">
-            Date de publication
-          </div>
-          <div class="information-content" slot="end">
-            {{ application.created_at }}
-          </div>
-        </ion-item>
-      </ion-item-group>
+            <div class="information-content" slot="end">
+              {{ application.repository }}
+            </div>
+          </ion-item>
+          <ion-item>
+            <div class="information-title">
+              Catégorie
+            </div>
+            <div class="information-content" slot="end">
+              {{ application.category }}
+            </div>
+          </ion-item>
+          <ion-item>
+            <div class="information-title">
+              Date de publication
+            </div>
+            <div class="information-content" slot="end">
+              {{ application.created_at }}
+            </div>
+          </ion-item>
+        </ion-item-group>
+      </div>
     </div>
   </div>
 </ion-content>
