--- a/src/app/pages/home/store/app/app.page.html
+++ b/src/app/pages/home/store/app/app.page.html
@@ -15,7 +15,8 @@
 
       <ion-item (click)="navigateAppDetails(application)">
         <ion-avatar class="icon" item-start>
-          <ion-img *ngIf="application.logo_url" src="{{ application.logo_url }}" style="height: 1.5rem; width: 1.5rem;"></ion-img>
+          <ion-img *ngIf="application.logo_url" src="{{ application.logo_url }}"
+                   style="height: 1.5rem; width: 1.5rem;"></ion-img>
           <ion-icon name="logo-dropbox" *ngIf="!application.logo_url"></ion-icon>
         </ion-avatar>
 
