--- a/src/app/pages/home/store/search/search.page.scss
+++ b/src/app/pages/home/store/search/search.page.scss
@@ -29,12 +29,18 @@ ion-list {
   font-weight: 500;
   text-transform: uppercase;
 
+  &-img {
+    margin-left: auto;
+    margin-right: auto;
+    width: 6em;
+  }
+
   ion-img {
     display: block;
     text-align: center;
     margin-bottom: 1rem;
     -webkit-filter: grayscale(100%);
     filter: grayscale(100%);
-    width: 40px;
+    height: 40px;
   }
 }
