--- a/src/app/pages/home/store/app/app.page.html
+++ b/src/app/pages/home/store/app/app.page.html
@@ -11,9 +11,9 @@
   <ion-progress-bar type="indeterminate" *ngIf="loader"></ion-progress-bar>
   <ion-list *ngIf="!loader">
 
-    <ion-item-sliding *ngFor="let application of applications.data">
+    <ion-item-sliding>
 
-      <ion-item (click)="navigateAppDetails(application)">
+      <ion-item *ngFor="let application of applications.data" (click)="navigateAppDetails(application)">
         <ion-avatar class="icon" item-start>
           <ion-img *ngIf="application.logo_url" src="{{ application.logo_url }}"
                    style="height: 1.5rem; width: 1.5rem;"></ion-img>
