--- a/src/app/pages/home/store/search/search.page.html
+++ b/src/app/pages/home/store/search/search.page.html
@@ -12,7 +12,7 @@
   <ion-list *ngIf="!isLoading && applications">
     <ion-item-sliding>
 
-      <ion-item *ngFor="let application of applications" (click)="navigateAppDetails(application)">
+      <ion-item *ngFor="let application of applications" (click)="navigateAppDetails(application)"  detail="true">
 
         <ion-avatar class="icon" item-start>
           <ion-img *ngIf="application.logo_url" src="{{ application.logo_url }}"
@@ -24,11 +24,6 @@
           <h2>{{ application.title }}</h2>
           <p>{{ application.category }}</p>
         </ion-label>
-
-        <ion-note item-end>
-          <ion-icon name="arrow-forward"></ion-icon>
-        </ion-note>
-
       </ion-item>
 
     </ion-item-sliding>
