Added QR Scanner

--- a/src/app/pages/home/add/add.page.html
+++ b/src/app/pages/home/add/add.page.html
@@ -21,7 +21,7 @@
         <div class="mirror-qrscan">
           <p>Pour lier un nouveau miroir à votre compte, scannez son QRCode</p>
           <span style="text-align: center; width: 100%; display: block">
-            <ion-button color="primary">Scanner QRCode</ion-button>
+            <ion-button color="primary" (click)="scanCode()">Scanner QRCode</ion-button>
           </span>
         </div>
       </ion-col>
