--- a/src/app/pages/home/store/mirror/mirror.page.scss
+++ b/src/app/pages/home/store/mirror/mirror.page.scss
@@ -1,5 +1,5 @@
 .header {
-  padding: 1rem 1rem 1rem 1rem;
+  padding: 2rem 1rem 1rem 1rem;
   background: #f5f5f5;
   border-top: none;
 }
@@ -33,7 +33,7 @@
   position: absolute;
   right: 0;
   top: 0;
-  margin: 1rem;
+  margin: 2rem 1rem;
   color: var(--ion-color-dark);
   background: transparent;
 }
