--- a/src/app/pages/home/account/account.page.html
+++ b/src/app/pages/home/account/account.page.html
@@ -2,18 +2,21 @@
 
 </ion-header>
 
-<ion-content forceOverscroll="false">
+<ion-content forceOverscroll="false" *ngIf="userInfos">
 
   <div class="background"></div>
   <div class="mirror">
     <img src="assets/imgs/avatar.svg" height="120">
   </div>
   <div class="name">
-    Username
+    {{ userInfos.name }}
+  </div>
+  <div class="email">
+    {{ userInfos.email }}
   </div>
   <div class="date">
     <div class="date-content">
-      created_at
+      {{ userInfos.created_at }}
     </div>
   </div>
   <div class="action-buttons">
