--- a/src/app/pages/home/account/account.page.scss
+++ b/src/app/pages/home/account/account.page.scss
@@ -21,8 +21,15 @@
 
 .name {
   text-align: center;
-  margin: .5rem 0;
-  font-size: 1.2rem;
+  font-size: 1.5rem;
+  margin-top: .5rem;
+}
+
+.email {
+  text-align: center;
+  font-size: .9rem;
+  margin-bottom: 1rem;
+  color: grey
 }
 
 .date {
