--- a/src/app/pages/home/dashboard/dashboard.page.html
+++ b/src/app/pages/home/dashboard/dashboard.page.html
@@ -23,10 +23,10 @@
 
       <ion-item (click)="navigateMirrorStore(mirror)" detail="true">
         <ion-avatar class="icon">
-          <ion-icon name="aperture" style="font-size: 1.5rem"></ion-icon>
+          <ion-icon name="aperture" color="medium" style="font-size: 1.5rem"></ion-icon>
         </ion-avatar>
 
-        <ion-label>{{ mirror.name }}</ion-label>
+        <ion-label color="medium">{{ mirror.name }}</ion-label>
       </ion-item>
 
       <ion-item-options side="end">
