--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -2,7 +2,7 @@
 
   <ion-tab-bar slot="bottom">
     <ion-tab-button tab="dashboard">
-      <ion-icon name="flash"></ion-icon>
+      <ion-icon name="md-apps"></ion-icon>
     </ion-tab-button>
 
     <ion-tab-button>
@@ -18,7 +18,7 @@
 
 
 <ion-fab vertical="bottom" horizontal="center" slot="fixed">
-  <ion-fab-button (click)="AddMirror()">
+  <ion-fab-button [class]="mirrors.length > 0 ? '' : 'plus-button'" (click)="AddMirror()">
     <ion-icon name="add"></ion-icon>
   </ion-fab-button>
 </ion-fab>
