--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -1,1 +1,17 @@
+@keyframes shadow-pulse
+{
+  0% {
+    box-shadow: 0 0 0 0 rgba(64, 196, 255, 0.2);
+    border-radius: 1000px;
+    color: green;
+  }
+  100% {
+    box-shadow: 0 0 0 35px rgba(64, 196, 255, 0);
+    border-radius: 1000px;
+    color: green;
+  }
+}
 
+.plus-button {
+  animation: shadow-pulse 1s infinite;
+}
