--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -18,7 +18,7 @@
 
 
 <ion-fab vertical="bottom" horizontal="center" slot="fixed">
-  <ion-fab-button [class]="mirrors.length > 0 ? '' : 'plus-button'" (click)="AddMirror()">
+  <ion-fab-button [class]="mirrors.length > 0 ? 'normal-button' : 'plus-button'" (click)="AddMirror()">
     <ion-icon name="add"></ion-icon>
   </ion-fab-button>
 </ion-fab>
