--- a/src/app/pages/home/store/app/app-details/app-details.page.scss
+++ b/src/app/pages/home/store/app/app-details/app-details.page.scss
@@ -26,6 +26,12 @@
   }
 }
 
+.module {
+  ion-icon {
+    font-size: 8rem;
+  }
+}
+
 .model {
   vertical-align: top;
   display: block;
@@ -34,10 +40,6 @@
 .author {
   color: grey;
   word-break: break-all;
-}
-
-ion-icon {
-  font-size: 8rem;
 }
 
 .body {
