Updated design of dashboard

--- a/src/app/pages/home/dashboard/dashboard.page.scss
+++ b/src/app/pages/home/dashboard/dashboard.page.scss
@@ -34,4 +34,10 @@ ion-card-header {
 
 ion-card-content {
   font-size: 1rem;
+  padding: 1rem 1rem;
+  min-height: 76px;
+}
+
+ion-card {
+  margin: .25rem;
 }
