--- a/src/app/pages/home/dashboard/dashboard.page.html
+++ b/src/app/pages/home/dashboard/dashboard.page.html
@@ -26,7 +26,7 @@
           </ion-card-header>
 
           <ion-card-content class="ion-text-center" mode="ios">
-            {{ mirror.name }}
+            {{ mirror.name | slice:0:37}}
           </ion-card-content>
         </ion-card>
 
