--- a/src/app/pages/home/store/app/app-details/app-details.page.html
+++ b/src/app/pages/home/store/app/app-details/app-details.page.html
@@ -5,7 +5,7 @@
     </ion-buttons>
 
     <ion-buttons slot="end">
-      <ion-button>
+      <ion-button (click)="navigateProtocol()">
         <ion-icon name="settings"></ion-icon>
       </ion-button>
     </ion-buttons>
@@ -43,7 +43,7 @@
     </div>
     <div class="body">
       <div class="pictures" *ngIf="application.screenshots.length > 0">
-        <h4>Preview</h4>
+        <h4>Aperçu</h4>
         <ion-slides pager="false" *ngIf="isArray(application.screenshots)">
           <ion-slide *ngFor="let screenshot of application.screenshots">
             <img src="{{ screenshot }}">
