Added protocol service + updated protocol view back

--- a/src/app/pages/home/store/app/app-details/app-details.page.html
+++ b/src/app/pages/home/store/app/app-details/app-details.page.html
@@ -4,7 +4,7 @@
       <ion-back-button></ion-back-button>
     </ion-buttons>
 
-    <ion-buttons slot="end">
+    <ion-buttons slot="end" *ngIf="uninstall">
       <ion-button (click)="navigateProtocol()">
         <ion-icon name="settings"></ion-icon>
       </ion-button>
